--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -60,3 +60,24 @@
   padding: 12px;
   font-size: 16px;
 }
+
+/* .quiz-card {
+  max-width: 100%;
+  margin: 0 auto;
+  width: 100%;
+} */
+
+/* .quiz-details {
+  gap: 10px;
+} */
+
+.detail-item {
+  flex-grow: 1;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  .quiz-details {
+    flex-direction: column;
+  }
+}
